--- a/assets/css/style_dashboard.css
+++ b/assets/css/style_dashboard.css
@@ -198,3 +198,40 @@
     #menuSuperior,.conteudo{margin-left: 0;}
     #menuSuperior{width: 100vw;}
 }
+
+/*POPUP*/
+
+#fundo-escuro-popup{
+    position:fixed;
+    top: 0;
+    left: 0;
+    z-index: 30000;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+}
+
+.conteudo-pop{
+    width: 100%;
+    height: 100vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+#conteudo-popup-form{
+    width: 600px;
+    height: 300px;
+    background-color: white;
+    padding: 20px;
+}
+
+.remove-RFP{
+    border: none;
+    background-color: transparent;
+    color: red;
+    font-size: 16px;
+    cursor: pointer;
+}
