--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,3 +217,48 @@ input[type=text],input[type=email], select, textarea {
 .btn-success:hover{
     background-color: #464646;
 }
+
+/* FILTRO TRANSAÇÕES FORM */
+
+#fundoFiltroTrans{
+    position:fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(1, 1, 1, 0.5);
+    z-index: 30000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;  
+}
+
+#form-container{
+    width: 600px;
+    /* height: 300px; */
+    background-color: white;
+    padding: 10px;
+}
+
+#btn-fechar-filtro-trans{
+    cursor: context-menu;
+    border: 1px solid grey;
+    padding: 10px;
+    border-radius: 2px;
+}
+#btn-fechar-filtro-trans:hover
+{
+    background-color:#E5E5E5;
+}
+
+#form-filtro-trans label
+{
+    font-weight: bold;
+}
+
+#form-filtro-trans select, input[type='date']{
+    width: 100%;
+    padding: 10px;
+    font-size: 1.02rem;
+}
