Inserção da página de planejamento

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,7 @@ input[type=text],input[type=email], select, textarea {
     /* height: 300px; */
     background-color: white;
     padding: 10px;
+    border-radius: 10px;
 }
 
 #btn-fechar-filtro-trans{
