--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,3 +387,22 @@ table {
       white-space: nowrap;
   }
   
+/* INÍCIO - FORMULARIO CADASTRO/EDITAR PLANEJAMENTO */
+
+.form-planejamento{
+    width: 600px;
+    margin: 0 auto;
+    border: 1px solid #cecdcd;
+    padding: 10px;
+}
+
+#check-categorias{
+    border: 1px solid #cecdcd;
+    width: 100%;
+    height: 300px;
+    overflow-y: scroll;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+/* FIM - FORMULARIO CADASTRO/EDITAR PLANEJAMENTO */
