--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ input[type=text],input[type=email], select, textarea {
     border-radius: 5px;
     font-weight: bold;
     /* font-size: 17px; */
-    margin-top: 10px;
+    margin: 10px 0;
     display: flex;
     justify-content: space-between;
 }
