--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,16 +187,16 @@
 
 
 
-input[type=text],input[type=email], select, textarea {
+input[type=text],input[type=email], select, textarea,input[type=number] {
     width: 100%;
     padding: 12px; 
     border: 1px solid #ccc; 
     border-radius: 4px; 
     box-sizing: border-box; 
     margin-top: 6px; 
-    margin-bottom: 16px; 
+    margin-bottom: 15px; 
     resize: vertical;
-    font-size: 16PX;
+    font-size: 1.02rem;
 }
 
 
@@ -266,11 +266,13 @@ input[type=text],input[type=email], select, textarea {
 }
 
 .container-form label{
-    color: #464646;
+    color: #263D52;
+    font-weight: bold;
 }
 
 .title-form{
     margin-bottom: 20px;
+    color: #263D52;
 }
 
 .btn-success
@@ -306,22 +308,27 @@ input[type=text],input[type=email], select, textarea {
     background-color: white;
     padding: 10px;
     border-radius: 10px;
+    border: 2px solid #0476B9;
 }
 
 #btn-fechar-filtro-trans{
     cursor: context-menu;
-    border: 1px solid grey;
-    padding: 10px;
+    /* border: 1px solid grey; */
+    padding: 5px 7px;
     border-radius: 2px;
+    background-color: #D70040;
+    color:white;
+    font-weight: bold;
 }
 #btn-fechar-filtro-trans:hover
 {
-    background-color:#E5E5E5;
+    background-color:#C41E3A;
 }
 
 #form-filtro-trans label
 {
     font-weight: bold;
+    color: #263D52;
 }
 
 #form-filtro-trans select, input[type='date']{
@@ -472,3 +479,33 @@ table {
 }
 
 /* FIM - FORMULARIO CADASTRO/EDITAR PLANEJAMENTO */
+
+.popup-relatorios-pag{
+    border: 2px solid #0476B9;
+    color:#263D52;
+    border-radius: 15px;
+}
+
+.popup-relatorios-pag button[type=submit]{
+    background-color: #0476B9;
+    border: 1px solid #0476B9;
+    color: white;
+    font-size: 1.02em;
+    padding: 5px 10px;
+}
+
+.btn-close-popup
+{
+    cursor: context-menu;
+    /* border: 1px solid grey; */
+    padding: 5px 7px;
+    border-radius: 2px;
+    background-color: #D70040;
+    color:white;
+    font-weight: bold;
+}
+
+.btn-close-popup:hover
+{
+    background-color:#C41E3A;
+}
